--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "workbox-range-requests": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3"
+    "workbox-streams": "^5.1.3",
+    "lodash": "^4.17.21",
+    "@types/lodash": "^4.14.170"
   },
   "scripts": {
     "start": "react-scripts start",
