--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.170",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "apollo-cache-persist": "^0.1.1",
     "graphql": "15.3.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -32,9 +35,7 @@
     "workbox-range-requests": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3",
-    "lodash": "^4.17.21",
-    "@types/lodash": "^4.14.170"
+    "workbox-streams": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
