--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mike-pwa-poc",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@apollo/client": "3.3.11",
@@ -36,6 +36,14 @@
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
     "workbox-streams": "^5.1.3"
+  },
+  "devDependencies": {
+    "husky": "4.3.8"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm version patch --force"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
