--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mike-pwa-poc",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "private": true,
   "dependencies": {
     "@apollo/client": "3.3.11",
@@ -37,19 +37,12 @@
     "workbox-strategies": "^5.1.3",
     "workbox-streams": "^5.1.3"
   },
-  "devDependencies": {
-    "husky": "4.3.8"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm version patch --force && node ./write-version.js"
-    }
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "patch": "npm version patch --force && node ./write-version.js"
   },
   "eslintConfig": {
     "extends": [
