--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mike-pwa-poc",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "private": true,
   "dependencies": {
     "@apollo/client": "3.3.11",
@@ -20,6 +20,7 @@
     "graphql": "15.3.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-detect-offline": "^2.4.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.0.3",
