--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mike-pwa-poc",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "private": true,
   "dependencies": {
     "@apollo/client": "3.3.11",
@@ -16,6 +16,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.3.0",
     "apollo-cache-persist": "^0.1.1",
     "graphql": "15.3.0",
     "lodash": "^4.17.21",
@@ -24,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
